--- a/workflows/build.yml
+++ b/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   macos:
@@ -19,4 +19,4 @@ jobs:
           brew install llvm@19
           brew install lld
       - name: Build
-        run: ${HOMEBREW_PREFIX}/opt/llvm@19/bin/clang -O3 --target=arm64-apple-macosx10.14 -o main -c main.c
+        run: ./build.sh
